Fix planet-language button alignment

--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -71,6 +71,8 @@
     grid-area: right;
     justify-self: right;
     align-self: center;
+    display: flex;
+    align-items: center;
   }
 
   .nav-shadow::before {
